BB-19887: The hint doesn't work on the product (description) edit page. - Fix z-index for a popover

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/variables.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/bootstrap/variables.scss
@@ -205,7 +205,6 @@ $popover-box-shadow: 1px 1px 9px 3px rgba(0, 0, 0, .08);
 $popover-border-width: 0px; /* stylelint-disable-line length-zero-no-unit */
 $popover-border-radius: 2px;
 $popover-border: none;
-$zindex-popover: 991;
 
 $popover-body-padding-y: 10px;
 $popover-body-padding-x: 12px;
